--- a/server/views/pages/index.njk
+++ b/server/views/pages/index.njk
@@ -1,7 +1,9 @@
 {% extends "../partials/layout.njk" %}
 
 {% set pageTitle = applicationName + " - Home" %}
-{% set mainClasses = "app-container govuk-body" %}
+
+{% block title %}{% endblock %}
+{% block banner %}{% endblock %}
 
 {% block content %}
 
