--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -1,4 +1,5 @@
 {% extends "govuk/template.njk" %}
+{% from "../components/prisonerBanner/macro.njk" import prisonerBanner %}
 
 {% block head %}
   <!--[if !IE 8]><!-->
@@ -27,6 +28,37 @@
 
 {% block bodyStart %}
 {% endblock %}
+
+ {% block main %}
+   <main class="govuk-main-wrapper app-container govuk-body" id="main-content" role="main"{% if mainLang %} lang="{{ mainLang }}"{% endif %}>
+   <div class="govuk-width-container">
+     {% block beforeContent %}{% endblock %}
+
+       {% block title %}
+         <div class="govuk-grid-row">
+           <div class="govuk-grid-column-two-thirds">
+             <h1 class="govuk-heading-xl govuk-!-margin-top-4 govuk-!-margin-bottom-7">
+               {{ prisonerDetails.firstName + ' ' + prisonerDetails.lastName }}'s court cases
+             </h1>
+           </div>
+         </div>
+       {% endblock %}
+       {% block banner %}
+            {{
+            prisonerBanner({
+              firstName: prisonerDetails.firstName,
+              lastName: prisonerDetails.lastName,
+              offenderNo: prisonerDetails.offenderNo,
+              onRemand: prisonerDetails.legalStatus === 'REMAND',
+              establishment: prisonerDetails.assignedLivingUnit.agencyName,
+              cellNumber: prisonerDetails.assignedLivingUnit.description
+            })
+            }}
+       {% endblock %}
+       {% block content %}{% endblock %}
+    </div>
+   </main>
+ {% endblock %}
 
 {% block bodyEnd %}
   {# Run JavaScript at end of the
