RASS-9 moved prisoner banner into own layout

--- a/server/views/pages/courtCase/reference.njk
+++ b/server/views/pages/courtCase/reference.njk
@@ -1,10 +1,10 @@
-{% extends "../../partials/layout.njk" %}
+{% extends "../../partials/prisonerBannerLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
 
 
 
-{% set pageTitle = applicationName + " - Home" %}
+{% set pageTitle = applicationName + " - Add a court case reference number" %}
 
 {% block content %}
     <div class="govuk-grid-row govuk-!-margin-top-4">
