--- a/server/views/pages/courtCase/warrant-date.njk
+++ b/server/views/pages/courtCase/warrant-date.njk
@@ -1,4 +1,4 @@
-{% extends "../../partials/layout.njk" %}
+{% extends "../../partials/prisonerBannerLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/date-input/macro.njk" import govukDateInput %}
 
