--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -1,4 +1,4 @@
-{% extends "../partials/layout.njk" %}
+{% extends "../partials/prisonerBannerLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 
