RASS-9 aligned with prototype

--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -5,6 +5,7 @@
 {% set pageTitle = applicationName + " - Home" %}
 
 {% block content %}
+    <h1>Start Page</h1>
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
         {{ govukButton({
