--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -1,10 +1,11 @@
-{% extends "../partials/layout.njk" %}
+{% extends "../partials/prisonerBannerLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 
 {% set pageTitle = applicationName + " - Home" %}
 
 {% block content %}
+    <h1>Start Page</h1>
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
         {{ govukButton({
