--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -6,6 +6,7 @@ $govuk-page-width: $moj-page-width;
 
 @import 'govuk/all';
 @import 'moj/all';
+@import 'dist/accessible-autocomplete.min';
 
 @import './components/header-bar';
 @import './components/prisoner-banner';
