RASS-14 added new court case journey test

--- a/server/views/pages/courtCase/check-answers.njk
+++ b/server/views/pages/courtCase/check-answers.njk
@@ -50,7 +50,7 @@
                         },
                         {
                             key: {
-                            text: "Court Name"
+                            text: "Court name"
                         },
                             value: {
                             text: courtCase.courtName
