RASS-15 added update reference from check answers

--- a/server/views/pages/courtCase/check-answers.njk
+++ b/server/views/pages/courtCase/check-answers.njk
@@ -24,7 +24,7 @@
                             actions: {
                             items: [
                                 {
-                                    href: "#",
+                                    href: "/person/" + nomsId + "/court-cases/reference?submitToCheckAnswers=true",
                                     text: "Change",
                                     visuallyHiddenText: "court case reference number"
                                 }
