RASS-15 warrant date change back to check answers

--- a/server/views/pages/courtCase/check-answers.njk
+++ b/server/views/pages/courtCase/check-answers.njk
@@ -41,7 +41,7 @@
                             actions: {
                             items: [
                                 {
-                                    href: "#",
+                                    href: "/person/" + nomsId + "/court-cases/warrant-date?submitToCheckAnswers=true",
                                     text: "Change",
                                     visuallyHiddenText: "warrant date"
                                 }
