--- a/server/views/pages/courtCase/warrant-date.njk
+++ b/server/views/pages/courtCase/warrant-date.njk
@@ -8,7 +8,7 @@
 {% block content %}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
-            <form method="post" action="/person/{{ nomsId }}/court-cases/submit-warrant-date">
+            <form method="post" action="/person/{{ nomsId }}/court-cases/submit-warrant-date{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 <span class="govuk-caption-l">Add a court case</span>
                 {{ govukDateInput({
@@ -20,7 +20,24 @@
                             isPageHeading: true,
                             classes: "govuk-fieldset__legend--l"
                         }
-                    }
+                    },
+                    items: [
+                        {
+                            classes: "govuk-input--width-2",
+                            name:"day",
+                            value: warrantDateDay
+                        },
+                        {
+                            classes: "govuk-input--width-2",
+                            name:"month",
+                            value: warrantDateMonth
+                        },
+                        {
+                            classes: "govuk-input--width-4",
+                            name:"year",
+                            value: warrantDateYear
+                        }
+                    ]
                 }) }}
 
                 {{ govukButton({
