RASS-15 court name change back to check answers

--- a/server/views/pages/courtCase/check-answers.njk
+++ b/server/views/pages/courtCase/check-answers.njk
@@ -58,7 +58,7 @@
                             actions: {
                             items: [
                                 {
-                                    href: "#",
+                                    href: "/person/" + nomsId + "/court-cases/court-name?submitToCheckAnswers=true",
                                     text: "Change",
                                     visuallyHiddenText: "court name"
                                 }
