RASS-15 next court date change back to check answers

--- a/server/views/pages/courtCase/check-answers.njk
+++ b/server/views/pages/courtCase/check-answers.njk
@@ -75,7 +75,7 @@
                             actions: {
                             items: [
                                 {
-                                    href: "#",
+                                    href: "/person/" + nomsId + "/court-cases/next-court-date-question?submitToCheckAnswers=true",
                                     text: "Change",
                                     visuallyHiddenText: "next court date"
                                 }
