RASS-32 updated prisoner details block

--- a/server/views/components/prisonerBanner/template.njk
+++ b/server/views/components/prisonerBanner/template.njk
@@ -13,6 +13,9 @@
                 </div>
                 <div class="govuk-grid-column-one-third govuk-!-padding-0">
                     <ul class="dwf-header-info">
+                        <li><span class="govuk-heading-s govuk-!-margin-bottom-0 govuk-!-padding-0">Date of birth</span><span class="govuk-body">{{ params.dateOfBirth }}</span></li>
+                        <li><span class="govuk-heading-s govuk-!-margin-bottom-0 govuk-!-padding-0">PNC number</span><span class="govuk-body">{{ params.pncNumber }}</span></li>
+                        <li><span class="govuk-heading-s govuk-!-margin-bottom-0 govuk-!-padding-0">Status</span><span class="govuk-body">{{ params.status }}</span></li>
                         <li><span class="govuk-heading-s govuk-!-margin-bottom-0 govuk-!-padding-0">Establishment</span><span class="govuk-body">{{ params.establishment }}</span></li>
                         <li><span class="govuk-heading-s govuk-!-margin-bottom-0 govuk-!-padding-0">Cell number</span><span class="govuk-body">{{ params.cellNumber }}</span></li>
                     </ul>
