--- a/server/views/partials/header.njk
+++ b/server/views/partials/header.njk
@@ -22,7 +22,8 @@
         <div class="govuk-phase-banner">
           {{ govukTag({
             text: environmentName,
-            classes: environmentNameColour
+            classes: environmentNameColour,
+            attributes: { "data-qa": "header-phase-banner" }
           }) }}
         </div>
       {% endif %}
@@ -32,7 +33,10 @@
       <ul class="hmpps-header__navigation">
         {% if user %}
           <li class="hmpps-header__navigation__item">
-            <span data-qa=header-user-name>{{ user.displayName | initialiseName }}</span>
+            <a data-qa="manageDetails" class="hmpps-header__link" href="/account-details" data-test="manage-account-link" target="_blank" rel="noopener noreferrer">
+              <span data-qa=header-user-name>{{ user.displayName | initialiseName }}</span>
+              <span class="hmpps-header__link__sub-text">Manage your details</span>
+            </a>
           </li>
         {% endif %}
 
