--- a/assets/scss/application.scss
+++ b/assets/scss/application.scss
@@ -10,4 +10,5 @@ $govuk-page-width: $moj-page-width;
 
 @import './components/header-bar';
 @import './components/prisoner-banner';
+@import './components/footer';
 @import 'assets/scss/local';
