--- a/server/views/partials/header.njk
+++ b/server/views/partials/header.njk
@@ -36,7 +36,7 @@
         {% endif %}
 
         <li class="hmpps-header__navigation__item">
-          <a data-qa="signOut" class="hmpps-header__link" href="/sign-out">Sign out</a>
+          <a data-qa="signOut" class="hmpps-header__link hmpps-header__link--no-underline hmpps-header__sign-out" href="/sign-out">Sign out</a>
         </li>
       </ul>
     </nav>
