--- a/server/views/partials/prisonerBannerLayout.njk
+++ b/server/views/partials/prisonerBannerLayout.njk
@@ -25,7 +25,8 @@
                     cellNumber: prisonerDetails.cellNumber,
                     dateOfBirth: prisonerDetails.dateOfBirth,
                     pncNumber: prisonerDetails.pncNumber,
-                    status: prisonerDetails.status
+                    status: prisonerDetails.status,
+                    digitalPrisonServicesUrl: digitalPrisonServicesUrl
                 })
                 }}
             {% endblock %}
