--- a/assets/scss/components/_prisoner-banner.scss
+++ b/assets/scss/components/_prisoner-banner.scss
@@ -2,6 +2,7 @@
   margin: 0px 0px 30px 0px;
   position: relative;
   height: 175px;
+  box-sizing: border-box;
 }
 
 .dwf-header-inner {
@@ -9,30 +10,36 @@
   width: 100%;
   padding: 20px;
   height: 170px;
+  box-sizing: border-box;
 }
 
 .dwf-header-profile-img {
   width: 100px;
   height: 130px;
+  box-sizing: border-box;
 }
 
 .dwf-header-left {
   display: inline-block;
   float: left;
   margin-right: 15px;
+  box-sizing: border-box;
 }
 
 .dwf-header-info {
   padding: 0 !important;
   margin: 0;
+  box-sizing: border-box;
 }
 
 .dwf-header-info ul {
   list-style: none;
+  box-sizing: border-box;
 }
 
 .dwf-header-info li {
   display: inline-block;
   margin-right: 25px;
   color: #0b0c0c;
+  box-sizing: border-box;
 }
