--- a/server/views/pages/courtCase/reference.njk
+++ b/server/views/pages/courtCase/reference.njk
@@ -1,12 +1,18 @@
 {% extends "../../partials/prisonerBannerLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/input/macro.njk" import govukInput %}
-
-
+{% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 
 {% set pageTitle = applicationName + " - Add a court case reference number" %}
 
 {% block content %}
+
+    {{ govukBackLink({
+    text: "Back",
+    href: "/person/" + nomsId,
+    classes: 'govuk-!-margin-top-0'
+    }) }}
+
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
             <form method="post" action="/person/{{ nomsId }}/court-cases/submit-reference{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
