--- a/server/views/partials/prisonerBannerLayout.njk
+++ b/server/views/partials/prisonerBannerLayout.njk
@@ -1,6 +1,7 @@
 {% extends "./layout.njk" %}
 {% from "../components/prisonerBanner/macro.njk" import prisonerBanner %}
 {%- from "moj/components/sub-navigation/macro.njk" import mojSubNavigation -%}
+{%- from "govuk/components/back-link/macro.njk" import govukBackLink -%}
 
 
 {% block main %}
@@ -46,6 +47,12 @@
                     href: '#'
                 }]
             }) }}    
+            
+            {{ govukBackLink({
+                text: "Back",
+                href: backLink,
+                classes: 'govuk-!-margin-top-0'
+            }) }}
 
             {% block content %}{% endblock %}
         </div>
