RASS-37 updated check answers page

--- a/server/views/pages/courtCase/check-answers.njk
+++ b/server/views/pages/courtCase/check-answers.njk
@@ -86,13 +86,13 @@
                     ]
                 }) }}
 
-            <h2 class="govuk-heading-m">Now save this court case</h2>
-            <p class="govuk-body">By saving this court case you are confirming that, to the best of your knowledge, the details you are providing are correct according to the warrant.</p>
+            <h2 class="govuk-heading-m">Now add the offences for this appearance</h2>
+            <p class="govuk-body">You will need to enter all of the offence information from the warrant.</p>
 
             <form method="post" action="/person/{{ nomsId }}/court-cases/submit-check-answers">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 {{ govukButton({
-                    text: "Save court case"
+                    text: "Confirm and continue"
                 }) }}
             </form>
 
