rename title to something appropriate

--- a/server/views/pages/courtCase/lookup-case-outcome.njk
+++ b/server/views/pages/courtCase/lookup-case-outcome.njk
@@ -4,7 +4,7 @@
 
 
 
-{% set pageTitle = applicationName + " - Add a court case court name" %}
+{% set pageTitle = applicationName + " - Lookup a court case outcome" %}
 
 
 {% block content %}
