RASS-43 added look up offence name

--- a/server/views/pages/offence/confirm-offence.njk
+++ b/server/views/pages/offence/confirm-offence.njk
@@ -51,7 +51,7 @@
                 <a href="/person/{{ nomsId }}/court-cases/{{ courtCaseReference }}/offence-code">Enter a different offence code</a>
             </p>
             <p class="govuk-body">
-                <a href="/person/{{ nomsId }}/court-cases/{{ courtCaseReference }}/offence-name-search">Look up an offence by name</a>
+                <a href="/person/{{ nomsId }}/court-cases/{{ courtCaseReference }}/offence-name">Look up an offence by name</a>
             </p>
 
         </div>
