--- a/server/views/pages/offence/confirm-offence.njk
+++ b/server/views/pages/offence/confirm-offence.njk
@@ -14,7 +14,7 @@
             <form method="post" action="/person/{{ nomsId }}/court-cases/{{ courtCaseReference }}/submit-confirm-offence">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 <input type="hidden" name="offenceCode" value="{{ offence.code }}">
-                <input type="hidden" name="offenceDescription" value="{{ offence.description }}">
+                <input type="hidden" name="offenceName" value="{{ offence.description }}">
                 <h1 class="govuk-heading-l">
                     <span class="govuk-caption-l">Add an offence to court case {{ courtCaseReference }}</span>
                     Confirm the offence
