RASS-17 added global date and date time format

--- a/server/views/pages/courtCase/check-answers.njk
+++ b/server/views/pages/courtCase/check-answers.njk
@@ -53,7 +53,7 @@
                             text: "Warrant date"
                         },
                             value: {
-                            text: courtCase.warrantDate
+                            text: courtCase.warrantDate | formatDate
                         },
                             actions: {
                             items: [
