--- a/server/views/pages/courtCase/next-hearing-type.njk
+++ b/server/views/pages/courtCase/next-hearing-type.njk
@@ -6,11 +6,11 @@
 {% block content %}
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
-            <form method="post" action="/person/{{ nomsId }}/court-cases/{{ courtCaseReference }}/submit-next-hearing-type">
+            <form method="post" action="/person/{{ nomsId }}/court-cases/{{ courtCaseReference }}/submit-next-hearing-type{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 <span class="govuk-caption-l">Add a court case</span>
                 {{ govukRadios({
-                    name: "nextHearingSelect",
+                    name: "nextHearingType",
                     fieldset: {
                         legend: {
                         text: "Select the next hearing type",
