RASS-61 started appearance session model

--- a/server/views/pages/courtAppearance/reference.njk
+++ b/server/views/pages/courtAppearance/reference.njk
@@ -19,7 +19,7 @@
                     },
                     id: "reference-number",
                     name: "referenceNumber",
-                    value: courtCaseReference
+                    value: caseReferenceNumber
                 }) }}
 
                 {{ govukButton({
