--- a/server/views/pages/courtCase/check-answers.njk
+++ b/server/views/pages/courtCase/check-answers.njk
@@ -19,7 +19,7 @@
                             text: "Court case reference number"
                         },
                             value: {
-                            text: courtCase.referenceNumber
+                            text: courtAppearance.caseReferenceNumber
                         },
                             actions: {
                             items: [
@@ -36,7 +36,7 @@
                             text: "Court name"
                         },
                             value: {
-                            text: courtCase.courtName
+                            text: courtAppearance.courtName
                         },
                             actions: {
                             items: [
@@ -53,7 +53,7 @@
                             text: "Warrant date"
                         },
                             value: {
-                            text: courtCase.warrantDate | formatDate
+                            text: courtAppearance.warrantDate | formatDate
                         },
                             actions: {
                             items: [
