RASS-61 moved all other fields into appearance

--- a/server/views/pages/courtAppearance/check-next-hearing-answers.njk
+++ b/server/views/pages/courtAppearance/check-next-hearing-answers.njk
@@ -20,7 +20,7 @@
                             text: "Next hearing date"
                         },
                             value: {
-                            text: courtCase.nextHearingDate | formatDateTime
+                            text: courtAppearance.nextHearingDate | formatDateTime
                         },
                             actions: {
                             items: [
@@ -37,7 +37,7 @@
                             text: "Next hearing type"
                         },
                             value: {
-                            text: courtCase.nextHearingType
+                            text: courtAppearance.nextHearingType
                         },
                             actions: {
                             items: [
@@ -54,7 +54,7 @@
                             text: "Next hearing location"
                         },
                             value: {
-                            text: courtCase.nextHearingCourtName
+                            text: courtAppearance.nextHearingCourtName
                         },
                             actions: {
                             items: [
