reference court appearance

--- a/server/views/pages/courtAppearance/check-answers.njk
+++ b/server/views/pages/courtAppearance/check-answers.njk
@@ -70,7 +70,7 @@
                             text: "Overall case outcome"
                         },
                             value: {
-                            text: courtCase.overallCaseOutcome
+                            text: courtAppearance.overallCaseOutcome
                         },
                             actions: {
                             items: [
